--- a/reading/24.md
+++ b/reading/24.md
@@ -1,249 +1,139 @@
 <center>Text 1</center>
-&emsp;&emsp;In her new book Cogs and Monsters: What Economics Is, and What It
-Should Be, Diane Coyle, an economist at Cambridge University, argues that the
-digital economy requires new ways of thinking about progress. “Whatever we
-mean by the economy growing, by things getting better, the gains will have to
-be more evenly shared than in the recent past,” she writes. “An economy of tech
-millionaires or billionaires and gig workers, with middle-income jobs undercut
-by automation, will not be politically sustainable.”
-&emsp;&emsp;Improving living standards and increasing prosperity for more people will
-require greater use of digital technologies to boost productivity in various sectors,
-including health care and construction, says Coyle. But people can’t be expected
-to embrace the changes if they’re not seeing the benefits—if they’re just seeing
-good jobs being destroyed.
-&emsp;&emsp;In a recent interview, Coyle said she fears that tech’s inequality problem
-could be a roadblock to deploying AI. “We’re talking about disruption,” she says.
-“These are transformative technologies that change the ways we spend our time
-every day, that change business models that succeed.” To make such “tremendous
-changes,” she adds, you need social buy-in.
-&emsp;&emsp;Instead, says Coyle, resentment is simmering among many as the benefits are
-perceived to go to elites in a handful of prosperous cities.
-&emsp;&emsp;According to the Brookings Institution, a short list of eight American cities
-that included San Francisco, San Jose, Boston, and Seattle had roughly 38%
-of all tech jobs by 2019. New AI technologies are particularly concentrated:
-Brookings’s Mark Muro and Sifan Liu estimate that just 15 cities account for
-two-thirds of the AI assets and capabilities in the United States.
-&emsp;&emsp;The dominance of a few cities in the invention and commercialization of AI
-means that geographical disparities in wealth will continue to soar. Not only will
-this foster political and social unrest, but it could, as Coyle suggests, hold back
-the sorts of AI technologies needed for regional economies to grow.
-&emsp;&emsp;Part of the solution could lie in somehow loosening the stranglehold that
-Big Tech has on defining the AI agenda. That will likely take increased federal
-funding for research independent of the tech giants.
-&emsp;&emsp;A more immediate response is to broaden our digital imaginations to conceive
-of AI technologies that don’t simply replace jobs but expand opportunities in
-the sectors that different parts of the country care most about, like health care,
-education, and manufacturing.
+&emsp;&emsp;In her new book Cogs and Monsters: What Economics Is, and What It Should Be, Diane Coyle, an economist at Cambridge University, argues that the digital economy requires new ways of thinking about progress. “Whatever we mean by the economy growing, by things getting better, the gains will have to be more evenly shared than in the recent past,” she writes. “An economy of tech millionaires or billionaires and gig workers, with middle-income jobs undercut by automation, will not be politically sustainable.”  
+&emsp;&emsp;Improving living standards and increasing prosperity for more people will require greater use of digital technologies to boost productivity in various sectors, including health care and construction, says Coyle. But people can’t be expected to embrace the changes if they’re not seeing the benefits—if they’re just seeing good jobs being destroyed.  
+&emsp;&emsp;In a recent interview, Coyle said she fears that tech’s inequality problem could be a roadblock to deploying AI. “We’re talking about disruption,” she says. “These are transformative technologies that change the ways we spend our time every day, that change business models that succeed.” To make such “tremendous changes,” she adds, you need social buy-in.  
+&emsp;&emsp;Instead, says Coyle, resentment is simmering among many as the benefits are perceived to go to elites in a handful of prosperous cities.  
+&emsp;&emsp;According to the Brookings Institution, a short list of eight American cities that included San Francisco, San Jose, Boston, and Seattle had roughly 38% of all tech jobs by 2019. New AI technologies are particularly concentrated: Brookings’s Mark Muro and Sifan Liu estimate that just 15 cities account for two-thirds of the AI assets and capabilities in the United States.  
+&emsp;&emsp;The dominance of a few cities in the invention and commercialization of AI means that geographical disparities in wealth will continue to soar. Not only will this foster political and social unrest, but it could, as Coyle suggests, hold back the sorts of AI technologies needed for regional economies to grow.  
+&emsp;&emsp;Part of the solution could lie in somehow loosening the stranglehold that Big Tech has on defining the AI agenda. That will likely take increased federal funding for research independent of the tech giants.  
+&emsp;&emsp;A more immediate response is to broaden our digital imaginations to conceive of AI technologies that don’t simply replace jobs but expand opportunities in the sectors that different parts of the country care most about, like health care, education, and manufacturing.
 
-21. Coyle argues in her new book that economic growth should
-[A] give rise to innovations.
-[B] diversify career choices.
-[C] benefit people equally.
-[D] be promoted forcefully.
-22. According to Paragraph 2, digital technologies should be used to
-[A] bring about instant prosperity.
-[B] reduce people’s workload.
-[C] raise overall work efficiency.
-[D] enhance cross-sector cooperation.
-23. What does Coyle fear about transformative technologies?
-[A] They may affect work-life balance.
-[B] They may be impractical to deploy.
-[C] They may incur huge expenditure.
-[D] They may be unwelcome to the public.
-24. Several American cities are mentioned to show
-[A] the uneven distribution of AI technologies in the US.
-[B] the disappointing prospect of tech jobs in the US.
-[C] the fast progress of US regional economies.
-[D] the increasing significance of US AI assets.
-25. With regard to Coyle’s concern, the author suggests
-[A] raising funds to start new AI projects.
-[B] encouraging collaboration in AI research.
-[C] guarding against the side effects of AI.
-[D] redefining the role of AI technologies.
+21. Coyle argues in her new book that economic growth should ________  
+[A] give rise to innovations.  
+[B] diversify career choices.  
+[C] benefit people equally.  
+[D] be promoted forcefully.  
+22. According to Paragraph 2, digital technologies should be used to ________  
+[A] bring about instant prosperity.  
+[B] reduce people’s workload.  
+[C] raise overall work efficiency.  
+[D] enhance cross-sector cooperation.  
+23. What does Coyle fear about transformative technologies?  
+[A] They may affect work-life balance.  
+[B] They may be impractical to deploy.  
+[C] They may incur huge expenditure.  
+[D] They may be unwelcome to the public.  
+24. Several American cities are mentioned to show ________  
+[A] the uneven distribution of AI technologies in the US.  
+[B] the disappointing prospect of tech jobs in the US.  
+[C] the fast progress of US regional economies.  
+[D] the increasing significance of US AI assets.  
+25. With regard to Coyle’s concern, the author suggests ________  
+[A] raising funds to start new AI projects.  
+[B] encouraging collaboration in AI research.  
+[C] guarding against the side effects of AI.  
+[D] redefining the role of AI technologies.  
 
 <center>Text 2</center>
-&emsp;&emsp;The UK is facing a future construction crisis because of a failure to plant
-trees to produce wood, Confor has warned. The forestry and wood trade body
-has called for urgent action to reduce the country’s reliance on timber imports
-and provide a stable supply of wood for future generations. Currently only 20 per
-cent of the UK’s wood requirement is home-grown while it remains the second-
-largest net importer of timber in the world.
-&emsp;&emsp;Coming at a time of fresh incentives from the UK government for
-landowners to grow more trees, the trade body says these don’t go far enough and
-fail to promote the benefits of planting them to boost timber supplies. “Not only
-are we facing a carbon crisis now, but we will also be facing a future construction
-crisis because of a failure to plant trees to produce wood,” said Stuart Goodall,
-chief executive of Confor. “For decades we have not taken responsibility for
-investing in our domestic wood supply, leaving us exposed to fluctuating prices
-and fighting for future supplies of wood as global demand rises and our own
-supplies fall.”
-&emsp;&emsp;The UK has ideal conditions for growing wood to build low-carbon homes
-and is a global leader in certifying that its forests are sustainably managed,
-Confor says. While around three quarters of Scottish homes are built from
-Scottish timber, the use of home-grown wood in England is only around 25
-per cent. The causes of the UK’s current position are complex and range from
-outdated perceptions of productive forestry to the decimation of trees by grey
-squirrels. It also encompasses significant hesitation on behalf of farmers and
-other landowners to invest in longer-term planting projects.
-&emsp;&emsp;While productive tree planting can deliver real financial benefits to rural
-economies and contribute to the UK’s net-zero strategy, the focus of government
-support continues to be on food production and the rewilding and planting of
-native woodland solely for biodiversity. Goodall added: “While food production
-and biodiversity health are clearly of critical importance, we need our land to also
-provide secure supplies of wood for construction, manufacturing and contribute
-to net zero.”
-&emsp;&emsp;“While the UK government has stated its ambition for more tree planting,
-there has been little action on the ground. Confor is now calling for much
-greater impetus behind those aspirations to ensure we have enough wood to meet
-increasing demand.”
+&emsp;&emsp;The UK is facing a future construction crisis because of a failure to plant trees to produce wood, Confor has warned. The forestry and wood trade body has called for urgent action to reduce the country’s reliance on timber imports and provide a stable supply of wood for future generations. Currently only 20 per cent of the UK’s wood requirement is home-grown while it remains the second-largest net importer of timber in the world.  
 
-26. It can be learned from Paragraph 1 that the UK needs to
-[A] increase its domestic wood supply.
-[B] reduce its demand for timber.
-[C] lower its wood production costs.
-[D] lift its control on timber imports.
-27. According to Confor, the UK government’s fresh incentives
-[A] can hardly address a construction crisis.
-[B] are believed to come at a wrong time.
-[C] seem to be misleading for landowners.
-[D] will be too costly to put into practice.
-28. The UK’s exposure to fluctuating wood prices is a result of
-[A] the government’s inaction on timber imports.
-[B] inadequate investment in growing wood.
-[C] the competition among timber traders at home.
-[D] wood producers’ motive to maximise profits.
-29. Which of the following causes the shortage of wood supply in the UK?
-[A] Excessive timber consumption in construction.
-[B] Unfavourable conditions for growing wood.
-[C] Outdated technologies of the wood industry.
-[D] Farmers’ unwillingness to plant trees.
-30. What does Goodall think the UK government should do?
-[A] Subsidise the building of low-carbon homes.
-[B] Pay greater attention to boosting rural economies.
-[C] Provide more support for productive tree planting.
-[D] Give priority to pursuing its net-zero strategy.
+&emsp;&emsp;Coming at a time of fresh incentives from the UK government for landowners to grow more trees, the trade body says these don’t go far enough and fail to promote the benefits of planting them to boost timber supplies. “Not only are we facing a carbon crisis now, but we will also be facing a future construction crisis because of a failure to plant trees to produce wood,” said Stuart Goodall, chief executive of Confor. “For decades we have not taken responsibility for investing in our domestic wood supply, leaving us exposed to fluctuating prices and fighting for future supplies of wood as global demand rises and our own supplies fall.”  
+&emsp;&emsp;The UK has ideal conditions for growing wood to build low-carbon homes and is a global leader in certifying that its forests are sustainably managed, Confor says. While around three quarters of Scottish homes are built from Scottish timber, the use of home-grown wood in England is only around 25 per cent. The causes of the UK’s current position are complex and range from outdated perceptions of productive forestry to the decimation of trees by grey squirrels. It also encompasses significant hesitation on behalf of farmers and other landowners to invest in longer-term planting projects.  
+&emsp;&emsp;While productive tree planting can deliver real financial benefits to rural economies and contribute to the UK’s net-zero strategy, the focus of government support continues to be on food production and the rewilding and planting of native woodland solely for biodiversity. Goodall added: “While food production and biodiversity health are clearly of critical importance, we need our land to also provide secure supplies of wood for construction, manufacturing and contribute to net zero.”  
+&emsp;&emsp;“While the UK government has stated its ambition for more tree planting, there has been little action on the ground. Confor is now calling for much greater impetus behind those aspirations to ensure we have enough wood to meet increasing demand.”
+
+26. It can be learned from Paragraph 1 that the UK needs to ________  
+[A] increase its domestic wood supply.  
+[B] reduce its demand for timber.  
+[C] lower its wood production costs.  
+[D] lift its control on timber imports.  
+27. According to Confor, the UK government’s fresh incentives ________  
+[A] can hardly address a construction crisis.  
+[B] are believed to come at a wrong time.  
+[C] seem to be misleading for landowners.  
+[D] will be too costly to put into practice.  
+28. The UK’s exposure to fluctuating wood prices is a result of ________  
+[A] the government’s inaction on timber imports.  
+[B] inadequate investment in growing wood.  
+[C] the competition among timber traders at home.  
+[D] wood producers’ motive to maximise profits.  
+29. Which of the following causes the shortage of wood supply in the UK?  
+[A] Excessive timber consumption in construction.  
+[B] Unfavourable conditions for growing wood.  
+[C] Outdated technologies of the wood industry.  
+[D] Farmers’ unwillingness to plant trees.  
+30. What does Goodall think the UK government should do?  
+[A] Subsidise the building of low-carbon homes.  
+[B] Pay greater attention to boosting rural economies.  
+[C] Provide more support for productive tree planting.  
+[D] Give priority to pursuing its net-zero strategy.  
 
 <center>Text 3</center>
-&emsp;&emsp;One of the biggest challenges in keeping unsafe aging drivers off the road
-is convincing them that it’s time to turn over the keys. “It’s a complete life-
-changer” when someone stops—or is forced to stop—driving, said former risk
-manager Anne M. Menke.
-&emsp;&emsp;“The American Medical Association advises physicians that ‘in situations
-where clear evidence of substantial driving impairment implies a strong threat
-to patient and public safety, and where the physician’s advice to discontinue
-driving privileges is ignored, it is desirable and ethical to notify the Department
-of Motor Vehicles,’” Menke wrote. “Some states require physicians to report,
-others allow but do not mandate reports, while a few consider a report a breach of
-confidentiality. There could be liability and penalties if a physician does not act
-in accordance with state laws on reporting and confidentiality,” she counseled.
-&emsp;&emsp;Part of the problem in keeping older drivers safe is that the difficulties are
-addressed piecemeal by different professions with different focuses, including
-gerontologists, highway administration officials, automotive engineers and
-others, said gerontologist Elizabeth Dugan. “There’s not a National Institute of
-Older Driver Studies,” she said. “We need better evidence on what makes drivers
-unsafe” and what can help, said Dugan.
-&emsp;&emsp;One thing that does seem to work is requiring drivers to report in person for
-license renewal. Mandatory in-person renewal was associated with a 31 percent
-reduction in fatal crashes involving drivers 85 or older, according to one study.
-Passing vision tests also produced a similar decline in fatal crashes for those
-drivers, although there appeared to be no benefit from combining the two.
-&emsp;&emsp;Many older drivers don’t see eye doctors or can’t afford to. Primary
-care providers have their hands full and may not be able to follow through
-with patients who have trouble driving because they can’t turn their heads or
-remember where they are going—or have gotten shorter and haven’t changed
-their seat settings sufficiently to reach car pedals easily.
-&emsp;&emsp;As long as there are other cars on the roads, self-driving cars won’t solve
-the problems of crashes, said Dugan. Avoiding dangers posed by all those human
-drivers would require too many algorithms, she said. But we need to do more to
-improve safety, said Dugan. “If we’re going to have 100-year lives, we need cars
-that a 90-year-old can drive comfortably.”
+&emsp;&emsp;One of the biggest challenges in keeping unsafe aging drivers off the road is convincing them that it’s time to turn over the keys. “It’s a complete life-changer” when someone stops—or is forced to stop—driving, said former risk
+manager Anne M. Menke.  
 
-31. According to Paragraph 1, keeping unsafe aging drivers off the road
-[A] is a new safety measure.
-[B] has become a disputed issue.
-[C] can be a tough task to complete.
-[D] will be beneficial to their health.
-32. The American Medical Association’s advice
-[A] has won support from drivers.
-[B] is generally considered unrealistic.
-[C] is widely dismissed as unnecessary.
-[D] has met with different responses.
-33. According to Dugan, efforts to keep older drivers safe
-[A] have brought about big changes.
-[B] need to be well coordinated.
-[C] have gained public recognition.
-[D] call for relevant legal support.
-34. Some older drivers have trouble driving because they tend to
-[A] stick with bad driving habits.
-[B] have a weakened memory.
-[C] suffer from chronic pains.
-[D] neglect car maintenance.
-35. Dugan thinks that the solution to the problems of crashes may lie in
-[A] upgrading self-driving vehicles.
-[B] developing senior-friendly cars.
-[C] renovating transport facilities.
-[D] adjusting the age limit for drivers.
+&emsp;&emsp;“The American Medical Association advises physicians that ‘in situations where clear evidence of substantial driving impairment implies a strong threat to patient and public safety, and where the physician’s advice to discontinue driving privileges is ignored, it is desirable and ethical to notify the Department of Motor Vehicles,’” Menke wrote. “Some states require physicians to report, others allow but do not mandate reports, while a few consider a report a breach of confidentiality. There could be liability and penalties if a physician does not act in accordance with state laws on reporting and confidentiality,” she counseled.  
+&emsp;&emsp;Part of the problem in keeping older drivers safe is that the difficulties are addressed piecemeal by different professions with different focuses, including gerontologists, highway administration officials, automotive engineers and others, said gerontologist Elizabeth Dugan. “There’s not a National Institute of Older Driver Studies,” she said. “We need better evidence on what makes drivers unsafe” and what can help, said Dugan.  
+&emsp;&emsp;One thing that does seem to work is requiring drivers to report in person for license renewal. Mandatory in-person renewal was associated with a 31 percent reduction in fatal crashes involving drivers 85 or older, according to one study. Passing vision tests also produced a similar decline in fatal crashes for those drivers, although there appeared to be no benefit from combining the two.  
+&emsp;&emsp;Many older drivers don’t see eye doctors or can’t afford to. Primary care providers have their hands full and may not be able to follow through with patients who have trouble driving because they can’t turn their heads or remember where they are going—or have gotten shorter and haven’t changed their seat settings sufficiently to reach car pedals easily.  
+&emsp;&emsp;As long as there are other cars on the roads, self-driving cars won’t solve the problems of crashes, said Dugan. Avoiding dangers posed by all those human drivers would require too many algorithms, she said. But we need to do more to improve safety, said Dugan. “If we’re going to have 100-year lives, we need cars that a 90-year-old can drive comfortably.”
+
+31. According to Paragraph 1, keeping unsafe aging drivers off the road ________  
+[A] is a new safety measure.  
+[B] has become a disputed issue.  
+[C] can be a tough task to complete.  
+[D] will be beneficial to their health.  
+32. The American Medical Association’s advice ________  
+[A] has won support from drivers.  
+[B] is generally considered unrealistic.  
+[C] is widely dismissed as unnecessary.  
+[D] has met with different responses.  
+33. According to Dugan, efforts to keep older drivers safe ________  
+[A] have brought about big changes.  
+[B] need to be well coordinated.  
+[C] have gained public recognition.  
+[D] call for relevant legal support.  
+34. Some older drivers have trouble driving because they tend to ________  
+[A] stick with bad driving habits.  
+[B] have a weakened memory.  
+[C] suffer from chronic pains.  
+[D] neglect car maintenance.  
+35. Dugan thinks that the solution to the problems of crashes may lie in ________  
+[A] upgrading self-driving vehicles.  
+[B] developing senior-friendly cars.  
+[C] renovating transport facilities.  
+[D] adjusting the age limit for drivers.  
 
 <center>Text 4</center>
-&emsp;&emsp;If you look at the apps on your phone, chances are you have at least one
-related to your health—and probably several. Whether it is a mental health app, a
-fitness tracker, a connected health device or something else, many of us are taking
-advantage of this technology to keep better track of our health in some shape or
-form. Recent research from the Organization for the Review of Care and Health
-Applications found that 350,000 health apps were available on the market, 90,000
-of which launched in 2020 alone.
-&emsp;&emsp;While these apps have a great deal to offer, it is not always clear how the
-personal information we input is collected, safeguarded and shared online. Existing
-health privacy law, such as the Health Insurance Portability and Accountability Act,
-is primarily focused on the way hospitals, doctors’ offices, clinics and insurance
-companies store health records online. The health information these apps and
-health data tracking wearables are collecting typically do not receive the same legal
-protections.
-&emsp;&emsp;Without additional protections in place, companies may share (and potentially
-monetize) personal health information in a way consumers may not have authorized
-or anticipated. In 2021, Flo Health faced a Federal Trade Commission (FTC)
-investigation. The FTC alleged in a complaint that “despite express privacy claims,
-the company took control of users’ sensitive fertility data and shared it with third
-parties.” Flo Health and the FTC settled the matter with a Consent Order requiring
-the company to get app users’ express affirmative consent before sharing their
-health information as well as to instruct the third parties to delete the data they had
-obtained.
-&emsp;&emsp;Section 5 of the FTC Act empowers the FTC to initiate enforcement action
-against unfair or deceptive acts, meaning the FTC can only act after the fact if a
-company’s privacy practices are misleading or cause unjustified consumer harm.
-While the FTC is doing what it can to ensure apps are keeping their promises to
-consumers around the handling of their sensitive health information, the rate at
-which these health apps are hitting the market demonstrates just how immense of a
-challenge this is.
-&emsp;&emsp;As to the prospects for federal legislation, commentators suggest that
-comprehensive federal privacy legislation seems unlikely in the short term. States
-have begun implementing their own solutions to shore up protections for consumer-
-generated health data. California has been at the forefront of state privacy efforts
-with the California Consumer Privacy Act of 2018. Virginia, Colorado and Utah
-have also recently passed state consumer data privacy legislation.
+&emsp;&emsp;If you look at the apps on your phone, chances are you have at least one related to your health—and probably several. Whether it is a mental health app, a fitness tracker, a connected health device or something else, many of us are taking advantage of this technology to keep better track of our health in some shape or form. Recent research from the Organization for the Review of Care and Health Applications found that 350,000 health apps were available on the market, 90,000 of which launched in 2020 alone.  
 
-36. The research findings are cited in Paragraph 1 to show
-[A] the prevalence of health apps
-[B] the public concern over health
-[C] the popularity of smartphones
-[D] the advancement of technology
-37. What does the author imply about existing health privacy law?
-[A] Its coverage needs to be extended.
-[B] Its enforcement needs strengthening.
-[C] It has discouraged medical misconduct.
-[D] It has disappointed insurance companies.
-38. Before sharing its users’ health information, Flo Health is required to
-[A] seek the approval of the FTC
-[B] find qualified third parties
-[C] remove irrelevant personal data
-[D] obtain their explicit permission
-39. What challenge is the FTC currently faced with?
-[A] The complexity of health information.
-[B] The rapid increase in new health apps.
-[C] The subtle deceptiveness of health apps.
-[D] The difficulty in assessing consumer harm.
-40. It can be learned from the last paragraph that health data protection
-[A] has been embraced by health app developers
-[B] has been a focus of federal policy-making
-[C] has encountered opposition in California
-[D] has gained legislative support in some states
+&emsp;&emsp;While these apps have a great deal to offer, it is not always clear how the personal information we input is collected, safeguarded and shared online. Existing health privacy law, such as the Health Insurance Portability and Accountability Act, is primarily focused on the way hospitals, doctors’ offices, clinics and insurance companies store health records online. The health information these apps and health data tracking wearables are collecting typically do not receive the same legal protections.  
+&emsp;&emsp;Without additional protections in place, companies may share (and potentially monetize) personal health information in a way consumers may not have authorized or anticipated. In 2021, Flo Health faced a Federal Trade Commission (FTC) investigation. The FTC alleged in a complaint that “despite express privacy claims, the company took control of users’ sensitive fertility data and shared it with third parties.” Flo Health and the FTC settled the matter with a Consent Order requiring the company to get app users’ express affirmative consent before sharing their health information as well as to instruct the third parties to delete the data they had obtained.  
+&emsp;&emsp;Section 5 of the FTC Act empowers the FTC to initiate enforcement action against unfair or deceptive acts, meaning the FTC can only act after the fact if a company’s privacy practices are misleading or cause unjustified consumer harm. While the FTC is doing what it can to ensure apps are keeping their promises to consumers around the handling of their sensitive health information, the rate at which these health apps are hitting the market demonstrates just how immense of a challenge this is.  
+&emsp;&emsp;As to the prospects for federal legislation, commentators suggest that comprehensive federal privacy legislation seems unlikely in the short term. States have begun implementing their own solutions to shore up protections for consumer-generated health data. California has been at the forefront of state privacy efforts with the California Consumer Privacy Act of 2018. Virginia, Colorado and Utah have also recently passed state consumer data privacy legislation.  
+
+36. The research findings are cited in Paragraph 1 to show ________  
+[A] the prevalence of health apps  
+[B] the public concern over health  
+[C] the popularity of smartphones  
+[D] the advancement of technology  
+37. What does the author imply about existing health privacy law?  
+[A] Its coverage needs to be extended.  
+[B] Its enforcement needs strengthening.  
+[C] It has discouraged medical misconduct.  
+[D] It has disappointed insurance companies.  
+38. Before sharing its users’ health information, Flo Health is required to ________  
+[A] seek the approval of the FTC  
+[B] find qualified third parties  
+[C] remove irrelevant personal data  
+[D] obtain their explicit permission  
+39. What challenge is the FTC currently faced with?  
+[A] The complexity of health information.  
+[B] The rapid increase in new health apps.  
+[C] The subtle deceptiveness of health apps.  
+[D] The difficulty in assessing consumer harm.  
+40. It can be learned from the last paragraph that health data protection ________  
+[A] has been embraced by health app developers  
+[B] has been a focus of federal policy-making  
+[C] has encountered opposition in California  
+[D] has gained legislative support in some states  
